-added explanatory text to MyMessages tabs -removed "Invite User" buttons from _viewForm / NewForm / _viewProject / CompanyUsers pages, revised text to reflect update -updated explanatory messaging text on _viewForm / _viewProject / _viewInspection / and EditGISRecord main tabs plus tagging dialog Files modified - [_viewForm,MyMessages,EditGISRecord,NewForm,CompanyUsers,_viewProject,_viewInspection,ManageForms]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -408,6 +408,7 @@
                                     <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn121">
                                             <wm-label padding="unset 0.5em" name="label28_1" caption="Municipality employees can communicate with each other regarding this GIS record here. These notes are only visible to Municipality employees."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label20" caption="Use the &quot;Tag People&quot; button if you would like to send a notification to a specific user and cause your message to appear in their inbox."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow59">
@@ -504,7 +505,7 @@
             <wm-layoutgrid name="layoutgrid4">
                 <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31_3">
-                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification that they have been tagged on your message."
+                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification and will cause your message to show up in their inbox."
                         horizontalalign="center" textalign="left"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
