--- a/src/main/webapp/pages/_viewInspection/_viewInspection.html
+++ b/src/main/webapp/pages/_viewInspection/_viewInspection.html
@@ -224,7 +224,8 @@
                                     <wm-layoutgrid name="layoutgrid16">
                                         <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn121">
-                                                <wm-label padding="unset 0.5em" name="label28_1" caption="If you would like to communicate with the municipality regarding this form, leave a message below."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label28_1" caption="If you would like to communicate with the municipality or other CivicXpress users regarding this inspection, leave a message below."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label97_1" caption="Use the &quot;Tag People&quot; button if you would like to send a notification to a specific user and cause your message to appear in their inbox."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow59">
@@ -285,7 +286,8 @@
                                     <wm-layoutgrid name="layoutgrid30">
                                         <wm-gridrow padding="unset unset 1em unset" name="gridrow84_2">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn156_4">
-                                                <wm-label padding="unset 0.5em" caption="Municipality employees can communicate internally with each other regarding the form here. This tab is only visible to Municipality employees." name="label92"></wm-label>
+                                                <wm-label padding="unset 0.5em" caption="Municipality employees can communicate internally with each other regarding the inspection here. This tab is only visible to Municipality employees." name="label92"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label98_1" caption="Use the &quot;Tag People&quot; button if you would like to send a notification to a specific user and cause your message to appear in their inbox."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow85_1">
@@ -572,7 +574,7 @@
             <wm-layoutgrid name="layoutgrid4">
                 <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31_3">
-                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification that they have been tagged on your message."
+                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification and will cause your message to show up in their inbox."
                         horizontalalign="center" textalign="left"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
