--- a/src/main/webapp/pages/_viewProject/_viewProject.html
+++ b/src/main/webapp/pages/_viewProject/_viewProject.html
@@ -103,8 +103,8 @@
                                     <wm-layoutgrid name="layoutgrid18">
                                         <wm-gridrow name="gridrow76_1">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn135_1">
-                                                <wm-label name="label77" caption="The following members have been added to this project by the Project Owner or Municipality Admin." margin="unset 0.5em"></wm-label>
-                                                <wm-label name="label79" caption="Users who appear below can complete transactions for the project." margin="unset 0.5em"></wm-label>
+                                                <wm-label name="label77" caption="The following members have been added to this project by the project owner (or a municipality admin). Please contact the project owner if additional users should be added as project members."
+                                                margin="unset 0.5em"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow77_1">
@@ -120,7 +120,6 @@
                                                     related-entity-name="Users"></wm-grid-column>
                                                     <wm-grid-action key="addNewRow" display-name="Add Member" show="bind:addMember" class="btn-primary" iconclass="wi wi-plus" title="Add Member" action="Widgets.dialogAddMember.open()"
                                                     shortcutkey="" disabled="false"></wm-grid-action>
-                                                    <wm-grid-action key="customButton" display-name="Invite Member" show="bind:addMember" class="btn-secondary" iconclass="wi wi-plus" title="Invite Member" shortcutkey="" disabled="false"></wm-grid-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="bind:addMember" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
                                             </wm-gridcolumn>
@@ -147,7 +146,7 @@
                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneDOCUMENTS" title="ATTACHMENTS"></wm-tabpane>
+                                <wm-tabpane name="tabpaneDOCUMENTS" title="ATTACHMENTS" show="false"></wm-tabpane>
                                 <wm-tabpane name="tabpaneMAPS" title="LOCATION">
                                     <wm-layoutgrid name="layoutgrid17">
                                         <wm-gridrow name="gridrow61">
@@ -230,13 +229,13 @@
                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteProjectForms.invoke()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneINSPECTIONS" title="INSPECTIONS"></wm-tabpane>
-                                <wm-tabpane name="tabpaneFEES" title="FEES"></wm-tabpane>
+                                <wm-tabpane name="tabpaneFEES" title="FEES" show="false"></wm-tabpane>
                                 <wm-tabpane name="tabpane4" title="MESSAGES">
                                     <wm-layoutgrid name="layoutgrid16">
                                         <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn121">
-                                                <wm-label padding="unset 0.5em" name="label28_1" caption="If you would like to communicate with the municipality regarding this form, leave a message below."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label28_1" caption="If you would like to communicate with the municipality or other project members regarding this project, leave a message below."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label123" caption="Use the &quot;Tag People&quot; button if you would like to send a notification to a specific user and cause your message to appear in their inbox."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow59">
@@ -282,12 +281,13 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpane13" title="HISTORY"></wm-tabpane>
+                                <wm-tabpane name="tabpane13" title="HISTORY" show="false"></wm-tabpane>
                                 <wm-tabpane name="tabpaneIntenalMessages" title="INTERNAL" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee" on-select="tabpaneIntenalMessagesSelect($event, $scope)">
                                     <wm-layoutgrid name="layoutgrid30">
                                         <wm-gridrow padding="unset unset 1em unset" name="gridrow84_2">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn156_4">
                                                 <wm-label padding="unset 0.5em" caption="Municipality employees can communicate internally with each other regarding the form here. This tab is only visible to Municipality employees." name="label92"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label124" caption="Use the &quot;Tag People&quot; button if you would like to send a notification to a specific user and cause your message to appear in their inbox."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow85_1">
@@ -914,7 +914,7 @@
             <wm-layoutgrid name="layoutgrid4">
                 <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31_3">
-                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification that they have been tagged on your message."
+                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification and will cause your message to show up in their inbox."
                         horizontalalign="center" textalign="left"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
