--- a/src/main/webapp/pages/MunicipalityForms/MunicipalityForms.html
+++ b/src/main/webapp/pages/MunicipalityForms/MunicipalityForms.html
@@ -26,7 +26,7 @@
                 <wm-gridrow name="gridrow6">
                     <wm-gridrow name="gridrow7_1">
                         <wm-gridcolumn columnwidth="4" name="gridcolumn30" horizontalalign="left">
-                            <wm-composite name="composite3" show="true" accessroles="CXAdmin">
+                            <wm-composite name="composite3" show="false" accessroles="CXAdmin">
                                 <wm-label class="col-md-5 form-control-static" name="label19" caption="Select Date Range" fontweight="bold" padding="unset 0.5em"></wm-label>
                                 <wm-container class="col-md-7" name="container3">
                                     <wm-select name="selectTerms" dataset="bind:Variables.stvPeriods.dataSet" datavalue="bind:Variables.stvPeriods.dataSet[0].dataValue" datafield="dataValue" displayfield="dataValue" on-change="selectTermsChange($event, $scope, newVal, oldVal)"
@@ -36,7 +36,7 @@
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="2" name="gridcolumn11"></wm-gridcolumn>
                         <wm-gridcolumn columnwidth="3" name="gridcolumn32">
-                            <wm-composite name="compositeStart" padding="unset unset unset 2em" accessroles="CXAdmin">
+                            <wm-composite name="compositeStart" padding="unset unset unset 2em" accessroles="CXAdmin" show="false">
                                 <wm-label name="label14" caption="Start Date" class="col-md-4 form-control-static" fontweight="bold"></wm-label>
                                 <wm-container class="col-md-8" name="containerStart">
                                     <wm-date name="datetimeStart" datepattern="MM-dd-yyyy" datavalue="START DATE" placeholder="Start Date"></wm-date>
@@ -44,7 +44,7 @@
                             </wm-composite>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="3" name="gridcolumn33">
-                            <wm-composite name="compositeStart" padding="unset unset unset 2em" accessroles="CXAdmin">
+                            <wm-composite name="compositeStart" padding="unset unset unset 2em" accessroles="CXAdmin" show="false">
                                 <wm-label padding="unset 0.5em" name="label13" class="col-md-4 form-control-static" fontweight="bold" caption="End Date"></wm-label>
                                 <wm-container class="col-md-8" name="containerEnd">
                                     <wm-date name="datetimeEnd" datepattern="MM-dd-yyyy" placeholder="End Date"></wm-date>
@@ -55,7 +55,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow12">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                        <wm-panel iconclass="" autoclose="outsideClick" title="" name="panelCharts" accessroles="CXAdmin">
+                        <wm-panel iconclass="" autoclose="outsideClick" title="" name="panelCharts" accessroles="CXAdmin" show="false">
                             <wm-layoutgrid name="layoutgridCharts">
                                 <wm-gridrow name="gridrow13">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn22"></wm-gridcolumn>
